fix navbar title alignment and always keep the padding

--- a/less/base/_navs.less
+++ b/less/base/_navs.less
@@ -17,10 +17,7 @@
 .upf-nav__item {
   align-self: baseline;
   line-height: 2.6rem;
-
-  &:not(:first-child) {
-    margin-left: @spacing-x-sm;
-  }
+  margin-left: @spacing-x-sm;
 
   a {
     color: @color-text-contrast-light;
@@ -57,11 +54,6 @@
   a {
     color: @color-text-contrast;
     font-size: 24/@rem;
-    line-height: 2rem;
-
-    padding: 0;
-    margin-left: @spacing-xx-sm;
-    margin-right: @spacing-xx-sm;
   }
 
   a.active, a:hover {
